<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mbti.app.ui.home.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mbti_test"
        android:name="com.mbti.app.ui.home.ui.mbtitest.MbtiTestFragment"
        android:label="@string/mbti_test"
        tools:layout="@layout/fragment_mbti_test" />

   <!-- <fragment
        android:id="@+id/nav_mbti_type"
        android:name="com.mbti.app.ui.home.ui.mbtitype.MbtiType"
        android:label="@string/mbti_type"
        tools:layout="@layout/fragment_mbti_type" />-->
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.mbti.app.ui.home.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>