<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="model"
            type="com.mbti.app.ui.home.ui.mbtitype.MbtiType" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.home.ui.mbtitype.MbtiType">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.mbti.app.utils.CustomFont
                android:id="@+id/tv_question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:padding="@dimen/dp_10"
                android:text="@string/question_1"
                android:textColor="@color/black"
                android:textSize="@dimen/font_medium"
                android:textStyle="bold"></com.mbti.app.utils.CustomFont>

            <RadioGroup
                android:id="@+id/rb_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb1_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:drawableTint="@color/black"
                    android:paddingStart="@dimen/dp_10"
                    android:text="@string/yes"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"></RadioButton>

                <RadioButton
                    android:id="@+id/rb1_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:drawableTint="@color/black"
                    android:paddingStart="@dimen/dp_10"
                    android:text="@string/no"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"></RadioButton>
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"></View>


            <com.mbti.app.utils.CustomFont
                android:id="@+id/tv_question_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_10"
                android:text="@string/question_2"
                android:textColor="@color/black"

                android:textSize="@dimen/font_medium"
                android:textStyle="bold"></com.mbti.app.utils.CustomFont>


            <RadioGroup
                android:id="@+id/rb_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb2_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:drawableTint="@color/black"
                    android:paddingStart="@dimen/dp_10"
                    android:text="@string/yes"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"></RadioButton>

                <RadioButton
                    android:id="@+id/rb2_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:drawableTint="@color/black"
                    android:paddingStart="@dimen/dp_10"
                    android:text="@string/no"
                    android:textSize="@dimen/font_medium"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"></RadioButton>
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"></View>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_pass"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/rounded_cornerbackground_btn"
                android:elevation="@dimen/dp_15"
                android:fontFamily="@font/segoe_ui_regular"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/font_small"></Button>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />
    </RelativeLayout>
</layout>